Fixed modal z-index issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,10 @@
     margin-right: 25px;
 }
 
+.modal {
+    z-index: 10000000;
+}
+
 .title {
     display: inline;
     color: white;
